# diplom-cpp

./: .gitignore  README.md
blind_nav/: CMakeLists.txt
blind_nav/map/: spb.osrm.cells  spb.osrm.datasource_names  spb.osrm.names  spb.osrm.properties  spb.osrm.ramIndex
blind_nav/model/: yolo11_blind.rknn  yolo11_smart.rknn  yolo11_stable.rknn
blind_nav/src/: audio.cpp  audio.h  decode.cpp  decode.h  main.cpp  rknn_inference.cpp  rknn_inference.h
python/: extract_addresses.py  input_check.py  test.py
